make compatible with new home

--- a/2021-03-01-midterm-evaluation/introduction_slides/index.html
+++ b/2021-03-01-midterm-evaluation/introduction_slides/index.html
@@ -228,7 +228,7 @@
 						<div class="row" style="margin-top: 0">
 							<div class="col-100">
 							  <div class="fig-container" style="height: 55vh;"
-							   data-file="https://danielroelfs.github.io/slides/" 
+							   data-file="https://slides.danielroelfs.app/" 
 							   data-scrollable="yes">
 							  </div>  
 							</div>
