--- a/2021-10-13-wcpg/wcpg_index.html
+++ b/2021-10-13-wcpg/wcpg_index.html
@@ -47,7 +47,7 @@
         </tbody>
       </table>
 
-      <button class="btn" onclick="location.href='/slides/'">
+      <button class="btn" onclick="location.href='/'">
         <i class="fas fa-chevron-left">&nbsp;Back to index</i>
       </button>
     </div>
