--- a/2021-11-15-imaging-group-phd-day/imaging-group-phd-day-slides/index.html
+++ b/2021-11-15-imaging-group-phd-day/imaging-group-phd-day-slides/index.html
@@ -644,7 +644,7 @@
 					<div class="content h" style="height: 70%;">
 						Replace text with illustrations wherever you can
 						<figure style="width: 112vh;height: 63vh;">
-							<iframe width="100%" height="100%" src="https://danielroelfs.github.io/slides/2021-10-29-synergy-meeting/synergy-meeting-slides/index.html#/2"></iframe>
+							<iframe width="100%" height="100%" src="https://slides.danielroelfs.app/2021-10-29-synergy-meeting/synergy-meeting-slides/index.html#/2"></iframe>
 						</figure>
 					</div>
 
