--- a/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
+++ b/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
@@ -1024,7 +1024,7 @@
 <section id="additional-links-from-presentation" class="slide level2" data-preview-link="true">
 <h2>Additional links from presentation</h2>
 <div class="midlist" style="font-size: 3vmin;">
-<p><a href="https://danielroelfs.github.io/slides/2022-11-16-phd-club-seminar/phd-club-seminar_index.html"><strong>Slides and resources from last year’s presentation</strong></a> - Talk I gave last year on enhancing ggplots, includes inspiration, code, and a 5 step guide</p>
+<p><a href="https://slides.danielroelfs.app/2022-11-16-phd-club-seminar/phd-club-seminar_index.html"><strong>Slides and resources from last year’s presentation</strong></a> - Talk I gave last year on enhancing ggplots, includes inspiration, code, and a 5 step guide</p>
 <p><a href="https://taylor.wjakethompson.com"><strong>The {taylor} package</strong></a> - Package with both color palettes, themes, and datasets on Taylor Swift, <a href="https://github.com/wjakethompson/taylor/">GitHub</a></p>
 <p><a href="https://quarto.org/docs/presentations/revealjs/"><strong>Quarto + reveal.js</strong></a> - Quarto, the “Rmarkdown successor” used for creating these slides (<a href="https://github.com/danielroelfs/slides/blob/main/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.qmd">link to the source code</a> for this particular presentation, and <a href="https://github.com/danielroelfs/slides/blob/main/2022-11-16-phd-club-seminar/phd-club-seminar-slides/index.qmd">from last year’s presentation</a>)</p>
 </div>
