--- a/2020-11-27-ecrm20/ecrm20_index.html
+++ b/2020-11-27-ecrm20/ecrm20_index.html
@@ -55,7 +55,7 @@
         </tbody>
       </table>
 
-      <button class="btn" onclick="location.href='/slides/'">
+      <button class="btn" onclick="location.href='/'">
         <i class="fas fa-chevron-left">&nbsp;Back to index</i>
       </button>
     </div>
