--- a/2021-11-26-ecrm21/ecrm21_index.html
+++ b/2021-11-26-ecrm21/ecrm21_index.html
@@ -55,7 +55,7 @@
         </tbody>
       </table>
 
-      <button class="btn" onclick="location.href='/slides/'">
+      <button class="btn" onclick="location.href='/'">
         <i class="fas fa-chevron-left">&nbsp;Back to index</i>
       </button>
     </div>
