--- a/2024-11-19-phd-defense/disputation-slides/index.html
+++ b/2024-11-19-phd-defense/disputation-slides/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../style.css" />
   </head>
   <body class="black-bg">
+    <p class="frame-disclaimer">Best viewed on a large monitor</p>
     <div class="reveal-container">
       <iframe src="slides.html" class="slides-frame" width="1920" height="1200" style="transform: scale(0.65)"></iframe>
     </div>
