enforce css upate

--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Trial lecture slides</title>
-    <link rel="stylesheet" href="../../style.css" />
+    <link rel="stylesheet" href="../../style.css?v=1.0" />
   </head>
   <body class="black-bg">
     <p class="frame-disclaimer">Best viewed on a large monitor</p>
